--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>paragraf 1</p>
     <p>paragraf drugi (alfa-version)</p>
+    <p>paragraf trzeci (alfa-version)</p>
 </body>
 </html>
