--- a/CSS - wstęp/index.html
+++ b/CSS - wstęp/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="css/jednostki-miary.css">
 </head>
 <body>
+    header#logo{<h1>LOGO</h1>
+    <nav id="main-nav">
+        <ul>
+            <li><a href="">link 1</a></li>
+            <li><a href="">link 2</a></li>
+            <li><a href="">link 3</a></li>
+        </ul>
+    </nav>
+
     <div class="selectors">
         <h2 id=main-title>Lorem ipsum dolor sit amet consectetur.</h2>  
         <p>Lorem ipsum dolor sit amet.</p>
@@ -28,8 +38,8 @@
     
 <div class="hover">
     <form action="">
-        <input type="text">
-        <input type="text">
+        <input type="text" title="pierwszy input">
+        <input type="text" title="drugi input">
         <textarea name="" id="" cols="30" rows="10"></textarea>
         <input type="submit" value="wyślij">
     </form>
@@ -50,6 +60,16 @@
             <li><a href="">link 10</a></li>
         </ul>
     </div>
-
+    <section class="position">
+        <div class="orange"></div>
+        <div class="grey"></div>
+    </section>
+    <div class="jednostki-miary">
+        <div id="piksele">400px</div>
+        <div id="em">50em</div>
+        <div id="rem">20rem</div>
+        <div id="procenty">50%</div>
+        <div id="vh">vh</div>
+    </div>
 </body>
 </html>
