--- a/zadania-domowe/Zadanie26395/form.html
+++ b/zadania-domowe/Zadanie26395/form.html
@@ -17,7 +17,7 @@
        <input type="email" name="mail" id="mail">
        <br>
        <label for="tel">Telefon</label> <br>
-       <input type="number" name="tel" id="tel" min="0">
+       <input type="tel" name="tel" id="tel" min="0">
        <br>
        <p>Miasto</p>
        <select name="city" id="city">
