--- a/zadania-domowe/Zadanie26395/form.html
+++ b/zadania-domowe/Zadanie26395/form.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <form action="form" method="POST">
+   <form action="https://formspree.io/f/mwkwpkqe" method="POST">
        <label for="name">Imię</label> <br>
        <input type="text" name="name" id="name">
        <br>
@@ -17,7 +17,7 @@
        <input type="email" name="mail" id="mail">
        <br>
        <label for="tel">Telefon</label> <br>
-       <input type="tel" name="tel" id="tel" min="0">
+       <input type="tel" name="tel" id="tel">
        <br>
        <p>Miasto</p>
        <select name="city" id="city">
@@ -26,17 +26,17 @@
            <option value="gdansk">Gdańsk</option>
        </select>
        <p>Płeć</p>
-       <label for="gender">Kobieta</label>
-       <input type="radio" name="gender" id="gender">
-       <label for="gender">Mężczyzna</label>
-       <input type="radio" name="gender" id="gender">
+       <label for="female">Kobieta</label>
+       <input type="radio" name="gender" id="female">
+       <label for="male">Mężczyzna</label>
+       <input type="radio" name="gender" id="male">
        <br><br>
-       <label for="agree">Wyrażam zgodę na przetwarzanie moich danych osobowych</label>
-       <input type="checkbox" name="agree" id="agree" required>
-       <br>
        <label for="message">Wiadomość</label><br>
        <textarea name="message" id="message" maxlength="1000"></textarea>
        <br>
+       <label for="agree">Wyrażam zgodę na przetwarzanie moich danych osobowych</label>
+       <input type="checkbox" name="agree" id="agree" required>
+       <br><br> 
        <input type="submit" value="Wyślij">
    </form> 
 </body>
